introduction to css

--- a/index.html
+++ b/index.html
@@ -2,5 +2,14 @@
 <html>
   <head>
     <title>Martins</title>
+    <style>
+      body {
+        background: #282a36;
+        color: white;
+      }
+    </style>
   </head>
+  <body>
+    LaunchBase
+  </body>
 </html>
