resetting browser styles

--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
   <head>
     <title>Martins</title>
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+        border: none;
+      }
       body {
         background: #282a36;
         color: white;
-      }      
+      }
+      header {
+        background: rgba(0, 0, 0, 0.1);
+        border-bottom: 1px solid #333;
+        padding: 32px;
+      }
     </style>
   </head>
   <body>
