getting to know the css waterfall

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Martins</title>
     <style>
       * {
+        border: none;
         margin: 0;
         padding: 0;
-        border: none;
       }
       body {
         background: #282a36;
@@ -16,6 +16,12 @@
         background: rgba(0, 0, 0, 0.1);
         border-bottom: 1px solid #333;
         padding: 32px;
+      }
+      header div {
+        text-align: center;
+      }
+      header div a {
+        color: white;
       }
     </style>
   </head>
