--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <title>Martins</title>
     <style>
       * {
@@ -11,6 +14,7 @@
       body {
         background: #282a36;
         color: white;
+        font-family: "Source Sans 3", sans-serif;
       }
       header {
         background: rgba(0, 0, 0, 0.1);
@@ -22,6 +26,14 @@
       }
       header div a {
         color: white;
+        font-size: 18px;
+        line-height: 28px;
+        margin: 0 16px;
+        text-decoration: none;
+      }
+      header div a:hover {
+        color: #50fa7b;
+        transition: color 700ms;
       }
     </style>
   </head>
