--- a/index.html
+++ b/index.html
@@ -44,5 +44,8 @@
         <a href="/">Aulas</a>
       </div>
     </header>
+    <div class="wrapper">
+      <img alt="Martins" src="https://avatars.githubusercontent.com/u/179001313?v=4">
+    </div>
   </body>
 </html>
