working with text in html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     </header>
     <div class="wrapper">
       <img alt="Martins" src="https://avatars.githubusercontent.com/u/179001313?v=4">
+      <h1>Martins</h1>
+      <h2>Estudante - Full Stack</h2>
+      <p>Determinado em aprender programação na <a target="_blank" href="https://www.rocketseat.com.br/">Rocketseat</a></p>
     </div>
   </body>
 </html>
