social media links

--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
       <h2>Estudante - Full Stack</h2>
       <p>Determinado em aprender programação na <a target="_blank" href="https://www.rocketseat.com.br/">Rocketseat</a></p>
     </div>
+    <div class="links" id="links-footer">
+      <a href="#">Instagram</a>
+      <a href="#">GitHub</a>
+      <a href="#">LinkedIn</a>
+    </div>
   </body>
 </html>
