--- a/classes.html
+++ b/classes.html
@@ -24,7 +24,67 @@
         </div>
         <div class="card_info">
           <p>57min</p>
-          <p>Grátis</p>
+          <p class="info_price">Grátis</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card_img">
+          <img alt="" src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg">
+        </div>
+        <div class="card_content">
+          <h1>Formulário Animado com JS puro e CSS Animation</h1>
+        </div>
+        <div class="card_info">
+          <p>57min</p>
+          <p class="info_price">Grátis</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card_img">
+          <img alt="" src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg">
+        </div>
+        <div class="card_content">
+          <h1>Formulário Animado com JS puro e CSS Animation</h1>
+        </div>
+        <div class="card_info">
+          <p>57min</p>
+          <p class="info_price">Grátis</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card_img">
+          <img alt="" src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg">
+        </div>
+        <div class="card_content">
+          <h1>Formulário Animado com JS puro e CSS Animation</h1>
+        </div>
+        <div class="card_info">
+          <p>57min</p>
+          <p class="info_price">Grátis</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card_img">
+          <img alt="" src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg">
+        </div>
+        <div class="card_content">
+          <h1>Formulário Animado com JS puro e CSS Animation</h1>
+        </div>
+        <div class="card_info">
+          <p>57min</p>
+          <p class="info_price">Grátis</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card_img">
+          <img alt="" src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg">
+        </div>
+        <div class="card_content">
+          <h1>Formulário Animado com JS puro e CSS Animation</h1>
+        </div>
+        <div class="card_info">
+          <p>57min</p>
+          <p class="info_price">Grátis</p>
         </div>
       </div>
     </section>
