--- a/classes.html
+++ b/classes.html
@@ -29,64 +29,67 @@
       </div>
       <div class="card">
         <div class="card_img">
-          <img alt="" src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg">
+          <img alt="" src="https://img.youtube.com/vi/HN1UjzRSdBk/maxresdefault.jpg">
         </div>
         <div class="card_content">
-          <h1>Formulário Animado com JS puro e CSS Animation</h1>
+          <h1>Desvendando o CSS Grid na prática</h1>
         </div>
         <div class="card_info">
-          <p>57min</p>
+          <p>36min</p>
           <p class="info_price">Grátis</p>
         </div>
       </div>
       <div class="card">
         <div class="card_img">
-          <img alt="" src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg">
+          <img alt="" src="https://img.youtube.com/vi/rAzHvYnQ8DY/maxresdefault.jpg">
         </div>
         <div class="card_content">
-          <h1>Formulário Animado com JS puro e CSS Animation</h1>
+          <h1>Array: Higher Order Functions</h1>
         </div>
         <div class="card_info">
-          <p>57min</p>
+          <p>54min</p>
           <p class="info_price">Grátis</p>
         </div>
       </div>
       <div class="card">
         <div class="card_img">
-          <img alt="" src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg">
+          <img alt="" src="https://img.youtube.com/vi/ghTrp1x_1As/maxresdefault.jpg">
         </div>
         <div class="card_content">
-          <h1>Formulário Animado com JS puro e CSS Animation</h1>
+          <h1>O que é API? REST e RESTful?</h1>
         </div>
         <div class="card_info">
-          <p>57min</p>
+          <p>33min</p>
           <p class="info_price">Grátis</p>
         </div>
       </div>
       <div class="card">
         <div class="card_img">
-          <img alt="" src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg">
+          <img alt="" src="https://img.youtube.com/vi/GSqR2i-Pq6o/maxresdefault.jpg">
         </div>
         <div class="card_content">
-          <h1>Formulário Animado com JS puro e CSS Animation</h1>
+          <h1>Desvendando a variável this no JavaScript</h1>
         </div>
         <div class="card_info">
-          <p>57min</p>
+          <p>48min</p>
           <p class="info_price">Grátis</p>
         </div>
       </div>
       <div class="card">
         <div class="card_img">
-          <img alt="" src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg">
+          <img alt="" src="https://img.youtube.com/vi/2alg7MQ6_sI/maxresdefault.jpg">
         </div>
         <div class="card_content">
-          <h1>Formulário Animado com JS puro e CSS Animation</h1>
+          <h1>Como usar Git e Github na prática: Guia para iniciantes</h1>
         </div>
         <div class="card_info">
-          <p>57min</p>
+          <p>33min</p>
           <p class="info_price">Grátis</p>
         </div>
       </div>
     </section>
+    <div class="modal-overlay">
+      
+    </div>
   </body>
 </html>
