adding modal style popup window

--- a/classes.html
+++ b/classes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="styles.css">
     <title>Martins</title>
   </head>
@@ -89,7 +90,12 @@
       </div>
     </section>
     <div class="modal-overlay">
-      
+      <div class="modal">
+        <div class="close_modal">
+          <span class="material-icons">close</span>
+        </div>
+        <div class="modal_content"><!--Content--></div>
+      </div>
     </div>
   </body>
 </html>
