selecting DOM elements

--- a/classes.html
+++ b/classes.html
@@ -97,5 +97,6 @@
         <div class="modal_content"><!--Content--></div>
       </div>
     </div>
+    <script src="scripts.js"></script>
   </body>
 </html>
