adding external content with iframe

--- a/classes.html
+++ b/classes.html
@@ -94,7 +94,9 @@
         <div class="close_modal">
           <span class="material-icons">close</span>
         </div>
-        <div class="modal_content"><!--Content--></div>
+        <div class="modal_content">
+          <iframe src="https://www.youtube.com/embed/GykTLqODQuU" frameborder="0"></iframe>
+        </div>
       </div>
     </div>
     <script src="scripts.js"></script>
