--- a/classes.html
+++ b/classes.html
@@ -16,7 +16,7 @@
       <h1>Aulas</h1>
     </div>
     <section class="cards">
-      <div class="card">
+      <div class="card" id="GykTLqODQuU">
         <div class="card_img">
           <img alt="" src="https://img.youtube.com/vi/GykTLqODQuU/maxresdefault.jpg">
         </div>
@@ -28,7 +28,7 @@
           <p class="info_price">Grátis</p>
         </div>
       </div>
-      <div class="card">
+      <div class="card" id="HN1UjzRSdBk">
         <div class="card_img">
           <img alt="" src="https://img.youtube.com/vi/HN1UjzRSdBk/maxresdefault.jpg">
         </div>
@@ -40,7 +40,7 @@
           <p class="info_price">Grátis</p>
         </div>
       </div>
-      <div class="card">
+      <div class="card" id="rAzHvYnQ8DY">
         <div class="card_img">
           <img alt="" src="https://img.youtube.com/vi/rAzHvYnQ8DY/maxresdefault.jpg">
         </div>
@@ -52,7 +52,7 @@
           <p class="info_price">Grátis</p>
         </div>
       </div>
-      <div class="card">
+      <div class="card" id="ghTrp1x_1As">
         <div class="card_img">
           <img alt="" src="https://img.youtube.com/vi/ghTrp1x_1As/maxresdefault.jpg">
         </div>
@@ -64,7 +64,7 @@
           <p class="info_price">Grátis</p>
         </div>
       </div>
-      <div class="card">
+      <div class="card" id="GSqR2i-Pq6o">
         <div class="card_img">
           <img alt="" src="https://img.youtube.com/vi/GSqR2i-Pq6o/maxresdefault.jpg">
         </div>
@@ -76,7 +76,7 @@
           <p class="info_price">Grátis</p>
         </div>
       </div>
-      <div class="card">
+      <div class="card" id="2alg7MQ6_sI">
         <div class="card_img">
           <img alt="" src="https://img.youtube.com/vi/2alg7MQ6_sI/maxresdefault.jpg">
         </div>
@@ -95,7 +95,7 @@
           <span class="material-icons">close</span>
         </div>
         <div class="modal_content">
-          <iframe src="https://www.youtube.com/embed/GykTLqODQuU" frameborder="0"></iframe>
+          <iframe src="" frameborder="0"></iframe>
         </div>
       </div>
     </div>
