--- a/challenges/about.html
+++ b/challenges/about.html
@@ -8,7 +8,8 @@
   <body>
     <header>
       <div class="links">
-        <a href="https://discordapp.com/invite/gCRAFhc" target="_blank">Discord</a>
+        <a href="content.html">Conteúdo</a>
+        <a target="_blank" href="https://discordapp.com/invite/gCRAFhc">Discord</a>
         <a href="mailto:oi@rocketseat.com.br">Email</a>
         <a href="tel:+5547992078767">Telefone</a>
         <a href="about.html">Sobre</a>
