--- a/challenges/index.html
+++ b/challenges/index.html
@@ -8,6 +8,7 @@
   <body>
     <header>
       <div class="links">
+        <a href="content.html">Conteúdo</a>
         <a target="_blank" href="https://discordapp.com/invite/gCRAFhc">Discord</a>
         <a href="mailto:oi@rocketseat.com.br">Email</a>
         <a href="tel:+5547992078767">Telefone</a>
